<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">bucket</string>

   <!-- Intro Activity -->
   <string name="getting_started">You can select either to join an existing game (which will prompt you for the game code) or you can create a new game,
      which will give you a game code which you can give to your friends to join your game</string>
   <string name="create_game">Create New Game</string>
   <string name="join_game">Join Existing Game</string>
   <string name="game_started">The game has been created.</string>
   <string name="join_dialog">Type in the game code of the game you want to join</string>

   <!-- Add Phrases Activity-->
   <string name="lets_play">Let\'s fucking play bucket</string>
   <string name="add_words">Type your phrase and click add to make a list of phrases to put in the bucket</string>
   <string name="submit_words">Once your phrases look good, press submit to put them in the bucket</string>
   <string name="word_list">You can click on a phrase in the list to bring it back to the edit box</string>


   <!-- Play Activity -->

   <!-- General Text -->
   <string name="add">Add</string>
   <string name="submit">Submit</string>
   <string name="cancel">Cancel</string>
   <string name="ok">OK</string>

</resources>
